--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8" />
     
-    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrao-min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css" />
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="container"></div>
   </body>
 </html>
